fix tab animation overflow

--- a/src/app/pages/projects/portfolio.component.scss
+++ b/src/app/pages/projects/portfolio.component.scss
@@ -5,6 +5,9 @@
     height: 100%;
     .mat-mdc-tab-body-wrapper {
       flex-grow: 1;
+      .mat-mdc-tab-body-content {
+        overflow-x: hidden;
+      }
     }
   }
 }
